2014-10-30  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/openvas_ssh_login.c (openvas_ssh_public_from_private): Use newer
	libssh API when available. This allows supporting ecdsa keys when using
	libssh 0.6.0 or higher.

2014-10-29  Matthew Mundell <matthew.mundell@greenbone.net>

	Skip OMP library log messages when sending passwords.

	* misc/openvas_server.c (openvas_server_vsendf_internal): New function.
	Body from openvas_server_vsendf, with quiet arg.
	(openvas_server_vsendf): Call openvas_server_vsendf_internal.
	(openvas_server_vsendf_quiet, openvas_server_sendf_quiet)
	(openvas_server_sendf_xml_quiet): New functions.

	* misc/openvas_server.h: Add header accordingly.

	* omp/omp.c (omp_authenticate, omp_authenticate_info_ext)
	(omp_create_lsc_credential): Use quiet send function when logging.

2014-10-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl.c, nasl/nasl.h, nasl/nasl_debug.c, nasl/nasl_debug.h,
	nasl/openvas_smb_interface.h, nasl/openvas_wmi_interface.h: Made any
	method without parameter explicitly use "void" to inticate this and
	help compiler to identify wrong usage.

2014-10-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/openvas_auth.c, misc/openvas_auth.h, misc/openvas_logging.c,
	misc/openvas_logging.h, misc/network.c, misc/network.h,
	misc/openvas_uuid.c, misc/openvas_uuid.h: Made any method without
	parameter explicitly use "void" to inticate this and help compiler to
	identify wrong usage.

2014-10-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/nvti.c, base/openvas_networking.c, base/nvti.h,
	base/openvas_networking.h, base/osp.c, base/nvticache.c, base/osp.h,
	base/nvticache.h: Made any method without parameter explicitly use "void" to
	inticate this and help compiler to identify wrong usage.

2014-10-28  Michael Meyer <michael.meyer@greenbone.net>

	* misc/plugutils.c (plug_set_key):
	Added newline to output.

2014-10-28  Hani Benhabiles <hani.benhabiles@greenbone.net>
